force-app/main/default/objects/CC_Aviso_Coordinador_Cases_Agrupador__e/CC_Aviso_Coordinador_Cases_Agrupador__e.object-meta.xml
<CustomObject>
    <description>Aviso para informar del número de casos asociados a un agrupador.</description>
    <label>Aviso Casos Agrupador</label>
    <pluralLabel>Avisos Casos Agrupador</pluralLabel>
</CustomObject>