force-app/main/default/objects/CC_Aviso_Coordinador_Cases_Agrupador__e/fields/Agrupador_Id__c.field-meta.xml
<CustomField>
    <fullName>Agrupador_Id__c</fullName>
    <label>Agrupador Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>