force-app/main/default/objects/CC_Aviso_Coordinador_Cases_Agrupador__e/fields/Agrupador_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Agrupador_RecordType__c</fullName>
    <label>Agrupador RecordType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>