force-app/main/default/objects/CC_Aviso_Coordinador_Cases_Agrupador__e/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <description>Cuerpo del mensaje</description>
    <label>Mensaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>