force-app/main/default/objects/CC_Aviso_Coordinador_Cases_Agrupador__e/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo del mensaje</description>
    <label>Tipo</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>